<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/add"
        android:scrollbars="none">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="60dp"
            app:layout_constraintTop_toTopOf="@+id/add"
            app:layout_constraintStart_toStartOf="@id/add"
            app:layout_constraintEnd_toEndOf="@id/add"
            android:layout_gravity="center_horizontal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_topic"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/cv_avatar"
            app:layout_constraintStart_toStartOf="@id/add"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textCapSentences|text"
                android:imeOptions="actionNext"
                android:hint="Topic" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rg_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/ti_topic"
            app:layout_constraintStart_toStartOf="@id/add"
            app:layout_constraintEnd_toEndOf="@id/add"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B" />

            <RadioButton
                android:id="@+id/rb_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C" />

            <RadioButton
                android:id="@+id/rb_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="D" />

            <RadioButton
                android:id="@+id/rb_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="E" />

            <RadioButton
                android:id="@+id/rb_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="F" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="G" />

        </RadioGroup>

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rg_location"
            app:layout_constraintRight_toRightOf="@id/add"
            app:layout_constraintLeft_toLeftOf="@id/add"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"/>

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/date_picker"
            app:layout_constraintRight_toRightOf="@id/add"
            app:layout_constraintLeft_toLeftOf="@id/add"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_participants"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/time_picker"
            app:layout_constraintRight_toLeftOf="@id/b_add"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_participant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Participants"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ti_participants"
            app:layout_constraintLeft_toLeftOf="@id/add"
            app:layout_constraintRight_toRightOf="@id/add" />

        <Button
            android:id="@+id/b_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_participants"
            app:layout_constraintLeft_toLeftOf="@id/add"
            app:layout_constraintRight_toRightOf="@id/add"
            android:backgroundTint="@color/colorGrey"
            android:hint="Create" />

        <Button
            android:id="@+id/b_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/colorGrey"
            android:hint="Add"
            app:layout_constraintEnd_toEndOf="@id/add"
            app:layout_constraintTop_toBottomOf="@+id/time_picker" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>