<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.benjamin.dugas.maru.ui.meeting_list.ListMeetingActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="Filters"
        android:icon="@drawable/baseline_filter_list_24"
        android:iconTint="@color/colorWhite"
        app:showAsAction="ifRoom" >
        <menu>
            <item android:id="@+id/i_date" android:title="Date"/>
            <item android:id="@+id/menuItem_location" android:title="Location">
                <menu>
                    <item android:id="@+id/i_a" android:title="A"/>
                    <item android:id="@+id/i_b" android:title="B"/>
                    <item android:id="@+id/i_c" android:title="C"/>
                    <item android:id="@+id/i_d" android:title="D"/>
                    <item android:id="@+id/i_e" android:title="E"/>
                    <item android:id="@+id/i_f" android:title="F"/>
                    <item android:id="@+id/i_g" android:title="G"/>
                    <item android:id="@+id/i_h" android:title="H"/>
                    <item android:id="@+id/i_i" android:title="I"/>
                    <item android:id="@+id/i_j" android:title="J"/>
                </menu>
            </item>
        </menu>
    </item>
</menu>